Fixes white bar at bottom caused by collapsing margins

--- a/frontend/src/features/booking/Booking.scss
+++ b/frontend/src/features/booking/Booking.scss
@@ -32,7 +32,7 @@ hr {
 
 #booking {
     margin: 0;
-    padding: 0;
+    padding: 0 0 40px 0;
 
     min-height: 100vh;
 
@@ -81,7 +81,7 @@ hr {
 .booking-content {
     width: 100%;
     max-width: 966px;
-    margin: 0 auto 40px auto;
+    margin: 0 auto 0 auto;
     padding: 26px 0px 10px 0px;
     background: #f1f1f1;
 }
